<resources>
    <string name="app_name">HabitForYou</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="feature_name_habbit_tracker">Habbit Tracker</string>

    <string name="empty_text" />

    <string name="main_navigation_home" translatable="false">Home</string>
    <string name="main_navigation_printer" translatable="false">Printer</string>
    <string name="main_navigation_habit_tracker" translatable="false">Habit Tracker</string>
    <string name="main_navigation_photos" translatable="false">Photos</string>
    <string name="main_navigation_videos" translatable="false">Videos</string>
    <string name="main_navigation_settings" translatable="false">Settings</string>

    <string name="main_menu_how_to_use" translatable="false">How to Use</string>

    <string name="nav_header_title" translatable="false">Habbit For You</string>
    <string name="nav_header_desc" translatable="false">Navigation Header</string>

    <string name="base_binding_dialog_close_text" translatable="false">Close</string>
    <string name="base_binding_dialog_default_loading_text" translatable="false">Please wait for a while...</string>


    <string name="on_boarding_button_start_title" translatable="false">Start</string>

    <string name="home_title" translatable="false">Habit For You</string>
    <string name="home_description" translatable="false">Do you want a new habit?\nThis app will help you!\nTry it for your furture!!</string>

    <!-- Settings -->
    <string name="main_setting_title_theme">화면 테마</string>
    <string name="main_setting_color_title">메인 컬러</string>
    <string name="main_setting_font_title">폰트</string>

    <!-- Bluetooth -->
    <string name="Bluetooth_connection_title_text" translatable="false">Scanned Bluetooth List</string>
    <string name="Bluetooth_connection_no_scanned_device_text" translatable="false">There is no bluetooth devices\nscanned nearby.</string>


    <!-- Printer -->
    <!-- Tab -->
    <string name="printer_title_text" translatable="false">Text</string>
    <string name="printer_title_image" translatable="false">Image</string>
    <string name="printer_title_extension" translatable="false">Extension</string>
    <string name="printer_title_settings" translatable="false">Settings</string>

    <!-- Image -->
    <string name="print_image_load_img_btn_title" translatable="false">Load Img</string>

    <!-- Printer Settings -->
    <!-- Preference Categories -->
    <string name="printer_bluetooth_device_header" translatable="false">Bluetooth Device</string>
    <string name="printer_format_setting_header" translatable="false">Basic Format Setting</string>

    <!-- Bluetooth Device -->
    <string name="printer_connect_bluetooth_device_title" translatable="false">프린터 연결하기</string>
    <string name="printer_store_pin_code_title" translatable="false">프린터 핀코드 입력</string>

    <!-- Basic Format Setting -->
    <string name="printer_font_size_title">폰트 사이즈</string>
    <string name="printer_text_align_title">정렬 방식</string>

    <!-- Copyright -->
    <string name="printer_copyright">Copyright.</string>
    <string name="printer_copyright_summary">TBD</string>
    <string name="title_activity_main_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Photos -->
    <!-- Tab -->
    <string name="photos_title_photos" translatable="false">Photos</string>
    <string name="photos_title_edit" translatable="false">Edit</string>

</resources>