<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/main_navigation_home" />

        <item
            android:id="@+id/nav_printer"
            android:icon="@drawable/ic_printer"
            android:title="@string/main_navigation_printer" />

        <item
            android:id="@+id/nav_habbit_tracker"
            android:icon="@drawable/ic_habit_tracker"
            android:title="@string/main_navigation_Habit_tracker" />

        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_photos"
            android:title="@string/main_navigation_photos" />

        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_videos"
            android:title="@string/main_navigation_videos" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/main_navigation_settings" />

    </group>
</menu>